Day54_private restate List

--- a/src/main/webapp/CSS/joinForm.css
+++ b/src/main/webapp/CSS/joinForm.css
@@ -29,7 +29,7 @@ input {
 
 textarea, textarea:focus {
 	outline: none;
-	border: 2px solid goldenrod;
+	border: 2px solid rgb(240, 196, 85);
 }
 
 .subBtn1 {
