--- a/src/main/webapp/CSS/BoardView.css
+++ b/src/main/webapp/CSS/BoardView.css
@@ -17,7 +17,6 @@ td {
 }
 
 table {
-	width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -60,7 +59,16 @@ input {
 	border-bottom: 1px solid black;
 }
 
+.replyList table, .replyForm table{
+	width: 100%;
+}
+
 .replyForm textarea{
 	width: 100%;
 	border-radius: 7px;
+}
+
+.rewriterSpan {
+	font-weight: bold;
+    margin-right: 10px;
 }
