Day56_boardList Order

--- a/src/main/webapp/CSS/joinForm.css
+++ b/src/main/webapp/CSS/joinForm.css
@@ -28,8 +28,8 @@ input {
 }
 
 textarea, textarea:focus {
-	outline: none;
-	border: 2px solid rgb(240, 196, 85);
+	border-radius: 7px;
+	width: 100%;
 }
 
 .subBtn1 {
