--- a/src/main/webapp/CSS/joinForm.css
+++ b/src/main/webapp/CSS/joinForm.css
@@ -34,7 +34,7 @@ textarea, textarea:focus {
 
 .subBtn1 {
 	font-weight: bold;
-    font-size: large;
+	font-size: medium;
     background-color: white;
     border: 3px solid slategray;
     padding: 5px 10px;
